Fixed wrapping issue w/ long community names.

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -39,6 +39,7 @@ body.application
       width: 976px
       margin: 0 auto
       #logo
+        white-space: nowrap
         margin-top: 10px
         text-decoration: none
         text-align: left
